syntax = "proto3";

package service;

option java_package = "com.volvo.service";
option java_multiple_files = true;


message OutputA {
  string query = 1;
}

message InputA {
}

service MsServiceA {
  rpc helloWorld(InputA) returns (stream OutputA) {};

}