syntax = "proto3";

package service;

option java_package = "com.volvo.service";
option java_multiple_files = true;


message OutputB {
  string query = 1;
}

message InputB {
}

service MsServiceB {
  rpc helloWorld(InputB) returns (stream OutputB) {};

}